# DiceRollingGame

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  dice_rolling_game.py  dice_rolling_game_v.01.py  dice_rolling_game_v.02.py  dice_rolling_game_v.03.py  dice_rolling_game_v.04.py  dice_rolling_game_v.05.py  dice_rolling_game_v.06.py  dice_rolling_game_v.07.py  dice_rolling_game_v.08.py  docker-compose.yml  history.json  history.jsonl  pyproject.toml  rolls.db
.github/workflows/: tests.yml
src/dice_game/: config.py  dice.py  dice_rolling_game.py  history.py  logic.py  main.py  models.py  printing.py  rolls.db  rules.py  simulation.py  stats.py  storage.py  ui.py
src/dice_game.egg-info/: PKG-INFO  SOURCES.txt
src/dice_game/api/: __init__.py  app.py  schemas.py  state.py
src/dice_game/api/routes/: __init__.py  history.py  roll.py  sessions.py  stats.py
src/dice_game/api/services/: __init__.py  game_session_service.py
src/dice_game/cli/: __init__.py  printing.py  ui.py
src/dice_game/domain/: __init__.py  config.py  constants.py  models.py  modes.py  stats.py
src/dice_game/exports/: rolls_export.csv
src/dice_game/services/: __init__.py  exceptions.py  game_session_service.py  history_service.py  logic.py  simulation.py
src/dice_game/storage/: __init__.py  connection.py  db_init.py  history_types.py  roll_repository.py  rolls.db  session_repository.py  sqlite_storage.py
tests/: conftest.py  test_api_sessions.py  test_dice.py  test_export.py  test_logic.py  test_main.py  test_pagination.py  test_rules.py  test_sqlite_storage.py  test_stats.py  test_storage.py  test_ui.py
