[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-game"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["fastapi", "uvicorn"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src/dice_game --cov-report=term-missing"

[tool.black]
target-version = ["py313"]
line-length = 88
skip-string-normalization = false

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.24",
  "ruff>=0.0.1",
  "black>=23.0",
  "mypy>=0.910",
]
