[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dice-game"
version = "2.0.0"
description = "Modern dice rolling game with CLI and REST API interfaces, featuring persistent sessions and Docker containerization"
requires-python = ">=3.10"
dependencies = ["fastapi", "uvicorn"]
authors = [{ name = "python-webdev" }]
keywords = ["dice", "game", "api", "cli", "docker", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src/dice_game --cov-report=term-missing"

[tool.black]
target-version = ["py313"]
line-length = 88
skip-string-normalization = false

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "httpx", "ruff", "black", "mypy"]
